2001-07-22  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h: Include inttypes.h when we have it.

2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h (SCM_UNBOUND): Make it the 34th isym/iflag, the 33th slot
	os taken by the new SCM_IM_CALL_WITH_VALUES.
	* print.c (scm_isymnames): Update table accordingly.
	
2001-07-22  Gary Houston  <ghouston@arglist.com>

	* regex-posix.c (s_scm_regexp_exec): use scm_long2num not
	SCM_MAKINUM to convert regoff_t value to SCM.

2001-07-21  Gary Houston  <ghouston@arglist.com>

	* scmsigs.c: include sys/time.h for itimer stuff.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* alist.c, arbiters.c, async.h, backtrace.h, boolean.c, chars.c,
	chars.h, continuations.h, debug-malloc.h, dynl.c, feature.c,
	feature.h, filesys.h, fluids.h, fports.h, gc_os_dep.c,
	gdb_interface.h, gh_eval.c, gh_funcs.c, gh_io.c, gh_list.c,
	gh_predicates.c, gsubr.c, gsubr.h, guardians.h,
	guile-func-name-check.in, guile-snarf-docs-texi.in,
	guile-snarf-docs.in, guile-snarf.awk.in, guile-snarf.in,
	hashtab.h, iselect.h, keywords.h, lang.c, list.h, load.h,
	objprop.c, objprop.h, options.c, options.h, random.h,
	regex-posix.h, root.c, root.h, script.c, snarf.h, stackchk.c,
	strerror.c, strop.h, strports.h, threads.h, values.c, values.h,
	version.c, version.h: Updated copyright notice.

2001-07-19  Rob Browning  <rlb@defaultvalue.org>

	* gc_os_dep.c (GC_noop1): ifdef out (unused) to quiet warning.

	* c-tokenize.lex: add option %nounput to quiet warning.
	Add prototype for yylex to quiet warning.

	* scmconfig.h.in: add flags for setitimer and getitimer.

	* scmsigs.h (scm_init_scmsigs): new prototype.
	(scm_init_scmsigs): new prototype.

	* scmsigs.c (s_scm_setitimer): new function.
	(s_scm_setitimer): new function.

2001-07-12  Michael Livshin  <mlivshin@bigfoot.com>

	* strings.c (s_scm_string): fix arg position in assert.

2001-07-11  Gary Houston  <ghouston@arglist.com>

	* strports.c (st_write): use memcpy, not strncpy.  thanks to